# email_abstract_rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  email_abstract.toml.example  events.db
src/: api_req.rs  cli.rs  config.rs  data_sql.rs  email.rs  email_abstract.rs  insert_html.rs  lib.rs  main.rs
template/: wanyou_full.html  wanyou_mini.html
tests/: api_req.rs  config.rs  data_sql.rs  email.rs  email_abstract.rs
