[package]
name = "email_abstract_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-imap = "0.8.0"
async-native-tls = "0.5.0"
mail-parser = "0.8.2"
serde_json = "1.0"
rusqlite = "0.25.0"
futures = "0.3.29"
log = "0.4"
imap = { version = "2.4", features = ["native-tls"] }
mailparse = "0.14"
chrono = "0.4"
native-tls = "0.2"
env_logger = "0.10"
dotenv = "0.15"
dirs = "5.0"
toml = "0.7"

[dev-dependencies]
tempfile = "3.3"
mockito = "0.31"
tokio-test = "0.4"
